# moodmate

./: .gitattributes  .gitignore  Makefile  README.md  deploy.yaml  docker-compose.yml  infisical-secrets.yaml  ingress.yaml  moodmate-test-0.0.1.tgz
.github/workflows/: build-n-push.yaml
ai-api/: .env  Dockerfile  Makefile  README.md  pyproject.toml
ai-api/ai_api/: main.py
ai-api/ai_api/core/component/: kb.py
ai-api/ai_api/core/component/llm/: litellm.py
ai-api/ai_api/core/domain/entity/: chat.py
ai-api/ai_api/core/domain/port/: kb.py  llm.py  memory.py
ai-api/ai_api/core/domain/usecase/: analyze.py  chat.py
ai-api/ai_api/core/logging/: base.py
ai-api/ai_api/di/: config.py  container.py
ai-api/ai_api/present/chat/: dto.py  router.py
ai-api/ai_api/present/diary/: dto.py  router.py
ai-api/note/: check.ipynb
backend/: Dockerfile  README.md  build.gradle  docker-compose.yml
backend/k8s-settings/: docker-mailserver.yaml  nginx.yaml  nodes.yaml  postgresql.yaml
docs/: contribution.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.tsx
helm-chart/: Chart.yaml
helm-chart/templates/: ai-api--env-configmap.yaml  ai-api-deployment.yaml  ai-api-service.yaml  backend-api-deployment.yaml  backend-api-service.yaml  backend-persistentvolumeclaim.yaml  frontend-deployment.yaml  frontend-persistentvolumeclaim.yaml  frontend-service.yaml  postgres-data-persistentvolumeclaim.yaml  postgres-deployment.yaml  (+2 more)
note/: test-backend.ipynb
(+96 files in other folders)
